Disabled the code optimization in some libraries

--- a/sipXmediaLib/contrib/libopus/libogg/win32/VS2019/libogg.vcxproj
+++ b/sipXmediaLib/contrib/libopus/libogg/win32/VS2019/libogg.vcxproj
@@ -275,6 +275,7 @@
       <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <WarningLevel>Level4</WarningLevel>
+      <WholeProgramOptimization>false</WholeProgramOptimization>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
