--- a/sipXmediaLib/contrib/libopus/libopusenc/win32/VS2019/opusenc.vcxproj
+++ b/sipXmediaLib/contrib/libopus/libopusenc/win32/VS2019/opusenc.vcxproj
@@ -209,6 +209,7 @@
     </ClCompile>
     <ClCompile>
       <RuntimeLibrary Condition="'$(Configuration)|$(Platform)'=='Release|x64'">MultiThreadedDLL</RuntimeLibrary>
+      <WholeProgramOptimization Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</WholeProgramOptimization>
     </ClCompile>
     <ClCompile>
       <RuntimeLibrary Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">MultiThreadedDebugDLL</RuntimeLibrary>
