--- a/sipXmediaLib/contrib/libopus/opusfile/win32/VS2019/opusfile.vcxproj
+++ b/sipXmediaLib/contrib/libopus/opusfile/win32/VS2019/opusfile.vcxproj
@@ -445,6 +445,7 @@
       <OmitFramePointers>true</OmitFramePointers>
       <FloatingPointModel>Fast</FloatingPointModel>
       <AdditionalIncludeDirectories>..\..\..\libogg\include;</AdditionalIncludeDirectories>
+      <WholeProgramOptimization>false</WholeProgramOptimization>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
