--- a/sipXmediaLib/contrib/libspeex/win32/VS2019/libspeex/libspeex.vcxproj
+++ b/sipXmediaLib/contrib/libspeex/win32/VS2019/libspeex/libspeex.vcxproj
@@ -639,6 +639,7 @@
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <CompileAs>CompileAsC</CompileAs>
       <DisableSpecificWarnings>4244;4305;4311;4100;4127;%(DisableSpecificWarnings)</DisableSpecificWarnings>
+      <WholeProgramOptimization>false</WholeProgramOptimization>
     </ClCompile>
     <Lib>
       <OutputFile>$(OutDir)$(TargetName)$(TargetExt)</OutputFile>
